kubernetes/apps/blackbox-exporter/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: blackbox-exporter
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blackbox-exporter
  namespace: blackbox-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: blackbox-exporter-blackbox-exporter
      app.kubernetes.io/name: prometheus-blackbox-exporter
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
    - to: # I don't want to create a big list
      - ipBlock:
          cidr: 0.0.0.0/0
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: haproxy-ingress
      ports:
        - port: 9115
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter
  namespace: blackbox-exporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: blackbox-exporter-blackbox-exporter
      app.kubernetes.io/name: prometheus-blackbox-exporter
  egress:
    - toEntities:
      - host
